--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
 	"dependencies": {
 		"dotenv": "^16.0.2",
 		"express": "^4.18.1",
-		"mongoose": "^6.6.0"
+		"mongoose": "^6.6.0",
+		"morgan": "^1.10.0"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.13",
