--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
 		"@types/react": "^18.0.20",
 		"@types/react-dom": "^18.0.6",
 		"axios": "^0.27.2",
+		"chart.js": "^3.9.1",
 		"react": "^18.2.0",
+		"react-chartjs-2": "^4.3.1",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.4.0",
 		"react-scripts": "5.0.1",
