--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "nodemon watch \"./\" --ext \"ts\" --exec \"ts-node src/index.ts\"",
+		"start": "ts-node src/index.ts",
+		"dev": "nodemon watch \"./\" --ext \"ts\" --exec \"ts-node src/index.ts\"",
 		"build": "tsc"
 	},
 	"keywords": [],
