--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,13 +18,12 @@
 		"react-router-dom": "^6.4.0",
 		"react-scripts": "5.0.1",
 		"sass": "^1.54.9",
-		"typescript": "^4.8.3",
-		"web-vitals": "^2.1.4"
+		"typescript": "^4.8.3"
 	},
 	"proxy": "http://localhost:5000",
 	"scripts": {
 		"start": "react-scripts start",
-		"build": "react-scripts build && mv ./build ../build/frontend",
+		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
