Docker optimizations to better utilize caching

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,9 +3,11 @@ FROM node:16.17.0-alpine as build
 
 WORKDIR /usr/src/app
 
-COPY . .
+COPY package*.json .
 
 RUN npm install
+
+COPY . .
 
 RUN npm run build
 
