--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,9 +2,11 @@ FROM node:16.17.0-alpine
 
 WORKDIR /usr/src/app
 
-COPY . .
+COPY package*.json .
 
 RUN npm install
+
+COPY . .
 
 ENV NODE_ENV=development
 ENV PORT=5000
@@ -12,4 +14,4 @@ ENV DATABASE_URL=mongodb://mongo:27017/darknet
 
 EXPOSE 5000
 
-CMD ["npm", "start"]
+CMD ["npm", "run", "dev"]
