--- a/scraper/Dockerfile
+++ b/scraper/Dockerfile
@@ -2,9 +2,11 @@ FROM python:3.10.5-alpine
 
 WORKDIR /usr/src/app
 
-COPY . .
+COPY requirements.txt .
 
 RUN pip install -r requirements.txt
+
+COPY . .
 
 ENV DATABASE_URL=mongodb://mongo:27017
 
