Backend container now listens to file changes (volumes)

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,9 +24,13 @@ services:
   backend:
     container_name: Express
     hostname: backend
-    build: ./backend
+    build:
+      context: ./backend
     ports:
       - 5000:5000
+    volumes:
+      - ./backend/:/usr/src/app
+      - /usr/src/app/node_modules
     depends_on:
       - mongo
   # React application
