--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "ts-node src/index.ts",
-		"dev": "nodemon watch \"./\" --ext \"ts\" --exec \"ts-node src/index.ts\"",
+		"dev": "nodemon -L watch \"./\" --ext \"ts\" --exec \"ts-node src/index.ts\"",
 		"build": "tsc"
 	},
 	"keywords": [],
