--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
 		"sass": "^1.54.9",
 		"typescript": "^4.8.3"
 	},
-	"proxy": "http://localhost:5000",
+	"proxy": "http://backend:5000",
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
