--- a/backend/package.json
+++ b/backend/package.json
@@ -19,14 +19,16 @@
 		"morgan": "^1.10.0"
 	},
 	"devDependencies": {
+		"@swc/core": "^1.3.4",
+		"@swc/helpers": "^0.4.11",
 		"@types/express": "^4.17.13",
-		"@types/mongoose": "^5.11.97",
 		"@types/node": "^18.7.17",
 		"@typescript-eslint/eslint-plugin": "^5.37.0",
 		"@typescript-eslint/parser": "^5.37.0",
 		"eslint": "^8.23.1",
 		"eslint-plugin-import": "^2.26.0",
 		"nodemon": "^2.0.19",
+		"regenerator-runtime": "^0.13.9",
 		"ts-node": "^10.9.1"
 	}
 }
