--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,17 +6,20 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"@types/javascript-time-ago": "^2.0.3",
 		"@types/jest": "^27.5.2",
 		"@types/node": "^16.11.59",
 		"@types/react": "^18.0.20",
 		"@types/react-dom": "^18.0.6",
 		"axios": "^0.27.2",
 		"chart.js": "^3.9.1",
+		"javascript-time-ago": "^2.5.7",
 		"react": "^18.2.0",
 		"react-chartjs-2": "^4.3.1",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.4.0",
 		"react-scripts": "5.0.1",
+		"react-time-ago": "^7.2.1",
 		"sass": "^1.54.9",
 		"typescript": "^4.8.3"
 	},
