--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,6 +45,6 @@ services:
       - 3000:3000
     volumes:
       - ./frontend/:/usr/src/app
-      - /usr/src/app/node_modules
+      # - /usr/src/app/node_modules
     depends_on:
       - backend
