--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"dotenv": "^16.0.2",
 		"express": "^4.18.1",
+		"express-validator": "^6.14.2",
 		"joi": "^17.6.1",
 		"mongoose": "^6.6.0",
 		"morgan": "^1.10.0"
