--- a/backend/package.json
+++ b/backend/package.json
@@ -25,11 +25,12 @@
 		"@types/express": "^4.17.13",
 		"@types/node": "^18.7.17",
 		"@typescript-eslint/eslint-plugin": "^5.37.0",
-		"@typescript-eslint/parser": "^5.37.0",
+		"@typescript-eslint/parser": "^5.38.1",
 		"eslint": "^8.23.1",
 		"eslint-plugin-import": "^2.26.0",
 		"nodemon": "^2.0.19",
 		"regenerator-runtime": "^0.13.9",
-		"ts-node": "^10.9.1"
+		"ts-node": "^10.9.1",
+		"typescript": "^4.8.4"
 	}
 }
