--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
 		"express-validator": "^6.14.2",
 		"joi": "^17.6.1",
 		"mongoose": "^6.6.0",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"socket.io": "^4.5.2"
 	},
 	"devDependencies": {
 		"@swc/core": "^1.3.4",
