Scraper socket token and authenticating in server

--- a/scraper/Dockerfile
+++ b/scraper/Dockerfile
@@ -9,5 +9,6 @@ RUN pip install -r requirements.txt
 COPY . .
 
 ENV DATABASE_URL=mongodb://mongo:27017
+ENV SOCKET_TOKEN=af7c1fe6-d669-414e-b066-e9733f0de7a8
 
 CMD ["python", "-u", "src/index.py"]
