Now using RabbitMQ to connect Scraper and API

--- a/scraper/Dockerfile
+++ b/scraper/Dockerfile
@@ -9,6 +9,7 @@ RUN pip install -r requirements.txt
 COPY . .
 
 ENV DATABASE_URL=mongodb://mongo:27017
-ENV SOCKET_TOKEN=af7c1fe6-d669-414e-b066-e9733f0de7a8
+ENV RABBITMQ_HOST=rabbitmq
+ENV RABBITMQ_PASTES_QUEUE=pastes
 
 CMD ["python", "-u", "src/index.py"]
