--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"amqplib": "^0.10.3",
 		"dotenv": "^16.0.2",
 		"express": "^4.18.1",
 		"express-validator": "^6.14.2",
@@ -23,6 +24,7 @@
 	"devDependencies": {
 		"@swc/core": "^1.3.4",
 		"@swc/helpers": "^0.4.11",
+		"@types/amqplib": "^0.8.2",
 		"@types/express": "^4.17.13",
 		"@types/node": "^18.7.17",
 		"@typescript-eslint/eslint-plugin": "^5.37.0",
