--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,18 +1,4 @@
 services:
-  # MongoDB Database
-  mongo:
-    container_name: Mongo
-    hostname: mongo
-    image: mongo
-    ports:
-      - 27017:27017
-  # Tor browser
-  tor:
-    container_name: Tor
-    hostname: tor
-    image: dperson/torproxy
-    ports:
-      - 9050:9050
   # Python scraper
   scraper:
     container_name: Scraper
@@ -48,3 +34,28 @@ services:
       - /usr/src/app/node_modules
     depends_on:
       - backend
+  # MongoDB Database
+  mongo:
+    image: mongo
+    container_name: Mongo
+    hostname: mongo
+    ports:
+      - 27017:27017
+  # Tor browser
+  tor:
+    image: dperson/torproxy
+    container_name: Tor
+    hostname: tor
+    ports:
+      - 9050:9050
+  # RabbitMQ
+  rabbitmq:
+    image: rabbitmq:management-alpine
+    container_name: RabbitMQ
+    hostname: rabbitmq
+    ports:
+      - 5672:5672
+      - 15672:15672
+    volumes:
+      - ~/Documents/data/rabbitmq/data/:/var/lib/rabbitmq
+      - ~/Documents/data/rabbitmq/log/:/var/log/rabbitmq
