--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,7 +7,7 @@
 		"forceConsistentCasingInFileNames": true,
 		"baseUrl": "./src",
 		"rootDir": "./src",
-		"outDir": "../build"
+		"outDir": "./build"
 	},
 	"ts-node": {
 		"swc": true
