--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,9 @@
-# Stage 1 - Building the react app
+# Stage 1 - Installing app dependencies
 FROM node:16.17.0-alpine as development
 
 WORKDIR /usr/src/app
 
-COPY package*.json .
+COPY package*.json ./
 
 RUN npm install
 
@@ -11,23 +11,22 @@ ENV WATCHPACK_POLLING=true
 
 COPY . .
 
-
-# Stage 2 - Middleware between development and production
+# Stage 2 - Building the app
 FROM node:16.17.0-alpine as build
 
 WORKDIR /usr/src/app
 
-COPY --from=development /usr/src/app .
+ENV GENERATE_SOURCEMAP=false
+
+COPY --from=development /usr/src/app ./
 
 RUN npm run build
 
-# Stage 3 - Serving the react app
+# Stage 3 - Serving the app
 FROM nginx:alpine
 
 COPY --from=build /usr/src/app/build /usr/share/nginx/html
 
 COPY ./nginx.conf /etc/nginx/conf.d/default.conf
-
-EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
