--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
 		"react-scripts": "5.0.1",
 		"react-time-ago": "^7.2.1",
 		"sass": "^1.54.9",
+		"socket.io-client": "^4.5.2",
 		"typescript": "^4.8.3"
 	},
 	"proxy": "http://backend:5000",
