--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
 		"javascript-time-ago": "^2.5.7",
 		"react": "^18.2.0",
 		"react-chartjs-2": "^4.3.1",
+		"react-device-detect": "^2.2.2",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.4.0",
 		"react-router-dom": "^6.4.0",
